# mnist-rs

./: .gitignore  Cargo.toml  README.md  init.md
scripts/: download_data.sh
src/: data.rs  layer.rs  lib.rs  main.rs  metal.rs  network.rs  tensor.rs  train.rs
