[package]
name = "mnist-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A pure Rust handwritten digit recognition using neural networks"

[dependencies]
image = "0.25"
rand = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"
objc2 = "0.6"

[dev-dependencies]
